[gd_scene load_steps=2 format=3 uid="uid://cjjqtr6xhktp4"]

[ext_resource type="Script" path="res://addons/m_terrain/gui/control_prop_element/float_range.gd" id="1_0cxmu"]

[node name="float_range" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0cxmu")

[node name="lable" type="Label" parent="."]
layout_mode = 2

[node name="value" type="LineEdit" parent="."]
layout_mode = 2
flat = true

[node name="slide" type="HSlider" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.1

[connection signal="focus_exited" from="value" to="." method="_on_value_focus_exited"]
[connection signal="text_submitted" from="value" to="." method="_on_value_text_submitted"]
[connection signal="value_changed" from="slide" to="." method="_on_slide_value_changed"]
